<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/dim_margin_container"
    >

    <TextView
        android:id="@+id/txtTitleAddCategoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/dim_size_text_title"
        android:text="@string/cat_add_registrar_categoria"
        android:textAlignment="center"
        />
    <TextView
        android:id="@+id/txtSeparador2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dim_margin_bottom_separador_title"
        android:background="@drawable/separador_title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilCategoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorPrimaryDark">

        <EditText
            android:id="@+id/edtxtCategoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cat_add_categoria"
            android:inputType="textPersonName"
            >
        </EditText>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilFechaRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColorHint="@color/colorPrimaryDark">

            <EditText
                android:id="@+id/edtxtFechaRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ent_add_fecha_registro"
                android:inputType="datetime">
            </EditText>
        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/imbtnFechaRegistro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/calendar_36"
            android:src="@drawable/calendar_36"

            />
    </LinearLayout>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <RadioButton
            android:id="@+id/rdbActivo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cat_add_activo"
            android:textColor="@color/colorPrimaryDark"
            >
        </RadioButton>
        <RadioButton
            android:id="@+id/rdbInactivo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cat_add_inactivo"
            android:textColor="@color/colorPrimaryDark"
            >
        </RadioButton>
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <ImageButton
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_save"
            />
        <ImageButton
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_cancel"

            />
    </LinearLayout>
</LinearLayout>
</androidx.core.widget.NestedScrollView>